[package]
name = "index_repo"
version = "0.1.0"
authors = ["mephi42 <mephi42@gmail.com>"]

[dependencies]
bytes = "0.4.11"
clap = "2.32.0"
diesel = { version = "1.4.1", default-features = false, features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
error-chain = "0.12.0"
futures = "0.1.25"
hex = "0.3.2"
hyper = "0.12"
hyper-tls = "0.3.1"
itertools = "0.8.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde-xml-rs = "0.3.1"
sha2 = "0.8.0"
smallvec = "0.6.9"
tempfile = "3.0.7"
xz2 = { version = "0.1.6", features = ["tokio"] }

[profile.release]
debug = true
