cargo-features = ["profile-overrides"]

[package]
name = "index_repo"
version = "0.1.0"
authors = ["mephi42 <mephi42@gmail.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bytes = "0.4.12"
clap = "2.32.0"
diesel = { version = "1.4.1", default-features = false, features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.25"
goblin = "0.0.21"
hex = "0.3.2"
hyper = "0.12.25"
hyper-tls = "0.3.1"
itertools = "0.8.0"
lazy_static = "1.3.0"
libsqlite3-sys = { version = "0.12.0", features = ["bundled"] }
log = "0.4.6"
nom = "4.2.2"
pretty-bytes = "0.2.2"
prettytable-rs = "0.8.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde-xml-rs = "0.3.1"
sha2 = "0.8.0"
smallvec = "0.6.9"
tempfile = "3.0.7"
tokio = { version = "0.1.16", features = ["async-await-preview"] }
tokio-async-await = "0.1.6"
tokio-executor = "0.1.6"
tokio-io = "0.1.12"
tokio-sync = "0.1.3"
tokio-threadpool = "0.1.12"
tokio-timer = "0.2.10"
xz2 = { version = "0.1.6", features = ["tokio"] }

[profile.dev.overrides.sha2]
opt-level = 3

[profile.release]
debug = true
